...
    var activeDialogType by remember { mutableStateOf<SettingsDialogType?>(null) }
    var textInputState by remember { mutableStateOf("") }

    Scaffold(
        topBar = {
            TopAppBar(
                modifier = Modifier.testTag("settingsTopAppBar"),
                title = { Text(stringResource(id = R.string.settings_title)) },
                navigationIcon = {
                    IconButton(
                        onClick = onBack,
                        modifier = Modifier.padding(start = 12.dp),
                    ) {
...
